<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/round_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="60dp" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <ImageView android:id="@+id/system_screenon_guesture" android:clickable="true" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/smart_watch_screenon_guesture_on" android:contentDescription="@string/screenon_guesture" style="@style/quicksettings_button_style"/>
        <Space android:layout_width="12dp" android:layout_height="match_parent"/>
        <ImageView android:id="@+id/notify_style" android:clickable="true" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/smart_watch_notify_send_style2_selected" android:contentDescription="@string/send_info_text2" style="@style/quicksettings_button_style"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/system_func_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:id="@+id/wifi_status" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/wifi_off" style="@style/quicksettings_button_style"/>
        <Space android:layout_width="12dp" android:layout_height="match_parent"/>
        <ImageView android:id="@+id/system_airplane_mode" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/smart_watch_airmode_off" android:contentDescription="@string/airplane_mode" style="@style/quicksettings_button_style"/>
        <Space android:layout_width="12dp" android:layout_height="match_parent"/>
        <ImageView android:id="@+id/mobile_data_settings" android:clickable="true" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/smart_watch_mobile_data_off" android:contentDescription="@string/mobiledata_name" style="@style/quicksettings_button_style"/>
        <Space android:layout_width="12dp" android:layout_height="match_parent"/>
        <ImageView android:id="@+id/bt_stat" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/bt_off" style="@style/quicksettings_button_style"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="60dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <FrameLayout android:id="@+id/frame" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size">
            <ImageView android:id="@+id/low" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/low_icon" style="@style/quicksettings_button_style"/>
            <ImageView android:id="@+id/high" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/high_icon" style="@style/quicksettings_button_style"/>
            <ImageView android:id="@+id/midd" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/midd_icon" style="@style/quicksettings_button_style"/>
        </FrameLayout>
        <Space android:layout_width="12dp" android:layout_height="match_parent"/>
        <ImageView android:id="@+id/system_connected_device" android:clickable="true" android:layout_width="@dimen/switch_icon_size" android:layout_height="@dimen/switch_icon_size" android:src="@drawable/gps_off" android:contentDescription="@string/connected_device" style="@style/quicksettings_button_style"/>
    </LinearLayout>
</RelativeLayout>
